--- a/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json.ExtendedTypes.csproj
+++ b/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json.ExtendedTypes.csproj
@@ -24,12 +24,12 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0-preview.7.22375.6" />
-		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="7.0.0-preview.7.22376.6" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0-rc.1.22426.10" />
+		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="7.0.0-rc.1.22427.2" />
 		<PackageReference Include="NodaTime" Version="3.1.2" />
 		<PackageReference Include="System.Buffers" Version="4.5.1" />
-		<PackageReference Include="System.Collections.Immutable" Version="7.0.0-preview.7.22375.6" />
-		<PackageReference Include="System.Text.Json" Version="7.0.0-preview.7.22375.6" />
+		<PackageReference Include="System.Collections.Immutable" Version="7.0.0-rc.1.22426.10" />
+		<PackageReference Include="System.Text.Json" Version="7.0.0-rc.1.22426.10" />
 	</ItemGroup>
 
 	<ItemGroup>
