--- a/Solutions/Corvus.Json.Patch.SpecGenerator/Corvus.Json.Patch.SpecGenerator.csproj
+++ b/Solutions/Corvus.Json.Patch.SpecGenerator/Corvus.Json.Patch.SpecGenerator.csproj
@@ -23,8 +23,8 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0-1.final" />
 		<PackageReference Include="Mono.TextTemplating" Version="2.2.1" />
-		<PackageReference Include="System.Collections.Immutable" Version="7.0.0-preview.7.22375.6" />
-		<PackageReference Include="System.Text.Json" Version="7.0.0-preview.7.22375.6" />
+		<PackageReference Include="System.Collections.Immutable" Version="7.0.0-rc.1.22426.10" />
+		<PackageReference Include="System.Text.Json" Version="7.0.0-rc.1.22426.10" />
 	</ItemGroup>
 
 	<ItemGroup>
