--- a/Solutions/Corvus.Json.Specs/Corvus.Json.Specs.csproj
+++ b/Solutions/Corvus.Json.Specs/Corvus.Json.Specs.csproj
@@ -24,11 +24,11 @@
 
 	<ItemGroup>
 		<PackageReference Include="Corvus.Testing.SpecFlow.NUnit" Version="1.5.1" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0-preview.7.22375.6" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0-rc.1.22426.10" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0-preview-20220726-02" />
 		<PackageReference Include="SolidToken.SpecFlow.DependencyInjection" Version="3.9.3" />
 		<PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.57" />
-		<PackageReference Include="System.Text.Encodings.Web" Version="7.0.0-preview.7.22375.6" />
+		<PackageReference Include="System.Text.Encodings.Web" Version="7.0.0-rc.1.22426.10" />
 
 		<PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.2">
 			<PrivateAssets>all</PrivateAssets>
@@ -43,7 +43,7 @@
 
 		<PackageReference Include="FluentAssertions" Version="6.7.0" />
 
-		<PackageReference Include="System.Text.Json" Version="7.0.0-preview.7.22375.6" />
+		<PackageReference Include="System.Text.Json" Version="7.0.0-rc.1.22426.10" />
 
 		<ProjectReference Include="..\Corvus.Json.CodeGeneration.201909\Corvus.Json.CodeGeneration.201909.csproj" />
 
