--- a/Solutions/Corvus.Json.Specs/Corvus.Json.Specs.csproj
+++ b/Solutions/Corvus.Json.Specs/Corvus.Json.Specs.csproj
@@ -34,6 +34,8 @@
 		<PackageReference Include="SpecFlow.NUnit" Version="3.9.74" />
 		<PackageReference Include="nunit" Version="3.13.3" />
 		<PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
+		<!-- Required for publishing test results directly to Azure Pipelines -->
+		<PackageReference Include="azurepipelines.testlogger" Version="1.2.2" />
 
 		<PackageReference Include="FluentAssertions" Version="6.7.0" />
 
