--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,5 +21,6 @@ jobs:
     service_connection_nuget_org: $(Endjin_Service_Connection_NuGet_Org)
     service_connection_github: $(Endjin_Service_Connection_GitHub)
     solution_to_build: $(Endjin_Solution_To_Build)
-    netSdkVersion: '7.x'
+    additionalNetSdkVersions:
+    - '7.x'
     includeNetSdkPreviewVersions: 'true'
