--- a/Solutions/Corvus.Json.Specs/Corvus.Json.Specs.csproj
+++ b/Solutions/Corvus.Json.Specs/Corvus.Json.Specs.csproj
@@ -70,6 +70,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Folder Include="Features\JsonModel\JsonStringTryGetValue\" />
 	  <Folder Include="Features\JsonSchema\Draft6\" />
 	</ItemGroup>
 
