--- a/Solutions/Corvus.Json.Specs/Corvus.Json.Specs.csproj
+++ b/Solutions/Corvus.Json.Specs/Corvus.Json.Specs.csproj
@@ -71,6 +71,7 @@
 
 	<ItemGroup>
 	  <Folder Include="Features\JsonModel\JsonStringTryGetValue\" />
+	  <Folder Include="Features\JsonModel\JsonStringConcatenate\" />
 	  <Folder Include="Features\JsonSchema\Draft6\" />
 	</ItemGroup>
 
