Added a version of the code suggested in #228 to resolve #238 Added specs involving a reference that requires encoding Added support to the driver for generating code from inline schemas Added support to the typebuilder (and related types) to allow the user to add virtual documents to the builder.

--- a/Solutions/Corvus.Json.Specs/Corvus.Json.Specs.csproj
+++ b/Solutions/Corvus.Json.Specs/Corvus.Json.Specs.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
 
 	<PropertyGroup>
@@ -67,20 +67,6 @@
 
 	<ItemGroup>
 	  <PackageReference Update="Roslynator.Analyzers" Version="4.4.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Features\JsonModel\JsonStringTryGetValue\" />
-	  <Folder Include="Features\JsonModel\JsonStringConcatenate\" />
-	  <Folder Include="Features\JsonModel\ParseValue\" />
-	  <Folder Include="Features\JsonSchema\Draft6\" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <SpecFlowFeatureFiles Update="Features\JsonModel\NumericComparison\JsonIntegerComparison.feature">
-	    <Visible>$(UsingMicrosoftNETSdk)</Visible>
-	    <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
-	  </SpecFlowFeatureFiles>
 	</ItemGroup>
 
 </Project>
