--- a/.github/workflows/matrix-build-workflow.yml
+++ b/.github/workflows/matrix-build-workflow.yml
@@ -110,7 +110,7 @@ env:
 jobs:
   compile:
     name: Compile & Analyse
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     outputs:
       semver: ${{ steps.run_compile.outputs.semver }}
       major: ${{ steps.run_compile.outputs.major }}
